[package]
name = "fixeduint"
version = "0.1.0"
edition = "2021"

[dependencies]
generic-array = "0.14.7"
num-traits = { version = "0.2.16", features = ["i128"] }
static_assertions = "1.1.0"
typenum = "1.16.0"

# [dependencies.awesome]
# version = "1.3.5"
# default-features = false # do not include the default features, and optionally
#                          # cherry-pick individual features
# features = ["secure-password", "civet"]

[dependencies.zerocopy]
version = "0.7.3"
features = ["alloc", "byteorder", "derive", "simd"]

[dependencies.bytemuck]
version = "1.14.0"
    # "aarch64_simd",
    # "align_offset",
    # "bytemuck_derive",
    # "extern_crate_alloc",
    # "extern_crate_std",
    # "min_const_generics",
    # "must_cast",
    # "nightly_docs",
    # "nightly_portable_simd",
    # "nightly_stdsimd",
    # "unsound_ptr_pod_impl",
    # "wasm_simd",
    # "zeroable_atomics",
    # "zeroable_maybe_uninit"


[dev-dependencies]
anyhow = "1.0.75"
